--- a/i18n/zh/docusaurus-theme-classic/footer.json
+++ b/i18n/zh/docusaurus-theme-classic/footer.json
@@ -4,28 +4,32 @@
     "description": "The title of the footer links column with title=Docs in the footer"
   },
   "link.title.Contact": {
-    "message": "联系我",
+    "message": "联系方式",
     "description": "The title of the footer links column with title=Contact in the footer"
   },
   "link.title.More": {
-    "message": "更多",
+    "message": "更多信息",
     "description": "The title of the footer links column with title=More in the footer"
   },
-  "link.item.label.Translation Portfolio": {
-    "message": "翻译作品集",
-    "description": "The label of footer link with label=Translation Portfolio linking to /docs/portfolio/index"
+  "link.item.label.Translation": {
+    "message": "翻译",
+    "description": "The label of footer link with label=Translation linking to /docs/translation"
   },
-  "link.item.label.CAT Tools": {
-    "message": "CAT 工具",
-    "description": "The label of footer link with label=CAT Tools linking to /docs/cat"
+  "link.item.label.Tech": {
+    "message": "技术",
+    "description": "The label of footer link with label=Tech linking to /docs/tech/git"
+  },
+  "link.item.label.Website Building": {
+    "message": "网站搭建",
+    "description": "The label of footer link with label=Website Building linking to /docs/website-building/docusaurus"
   },
   "link.item.label.Email Me": {
-    "message": "给我发邮件",
+    "message": "邮件",
     "description": "The label of footer link with label=Email Me linking to mailto:vickyhella@hotmail.com"
   },
   "link.item.label.LinkedIn": {
     "message": "领英主页",
-    "description": "The label of footer link with label=LinkedIn linking to https://www.linkedin.cn/incareer/in/vicky-wong-95a511aa"
+    "description": "The label of footer link with label=LinkedIn linking to https://www.linkedin.cn/incareer/in/vickyhella"
   },
   "link.item.label.Blog": {
     "message": "博客",
