--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -11,8 +11,8 @@
     "message": "博客",
     "description": "Navbar item with label Blog"
   },
-  "item.label.My GitHub Homepage": {
-    "message": "GitHub 主页",
-    "description": "Navbar item with label My GitHub Homepage"
+  "item.label.GitHub": {
+    "message": "GitHub",
+    "description": "Navbar item with label GitHub"
   }
 }
